Add support for WH3081 Fine Offset based weather stations.
Multiple, significant changes:
 - add protocol support for WH3081 climate packet
 - add protocol support for WH3081 solar packet
 - add protocol configuration for sync bit
 - change demod bit output to match analyse output

Build changes:
 - remove unused/unneeded executables from compile
 - change default compile to optimise for size
 - probably broke WIN32 support, have not checked
 - adjust gcc warnings to get a clean compile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,8 @@ if(CMAKE_COMPILER_IS_GNUCC AND NOT WIN32)
     ADD_DEFINITIONS(-Wextra)
     ADD_DEFINITIONS(-Wno-unused)
     ADD_DEFINITIONS(-Wsign-compare)
-    ADD_DEFINITIONS(-g3 -O0)
+    ADD_DEFINITIONS(-Wno-unused-parameter)
+    ADD_DEFINITIONS(-Os)
     #http://gcc.gnu.org/wiki/Visibility
     add_definitions(-fvisibility=hidden)
 endif()
